test/should-fail/比较-2.j
function test takes nothing returns nothing
    local handle u = null
    local integer i = 0
    local real r = 0.0
    local boolean b1 = i > r
    local boolean b2 = i > u
endfunction